added spotless for cleaner unified code style